package parte9.strategy;

public interface FlyBehavior {
    void fly();
}