package parte9.strategy;

public interface QuackBehavior {
    void quack();
}